# intelligent-data-viz

./: .env.example  .gitignore  LICENSE  PROJECT_BREAKDOWN_FINAL.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md
examples/: housing_prices.csv  sales_data.csv  student_performance.csv
src/config/: settings.py
src/data/: processor.py
src/llm/: analyzer.py  client.py  prompts.py  refiner.py
src/ui/: components.py
src/utils/: exceptions.py  logger.py  token_counter.py
src/visualization/: exporter.py  generator.py  styler.py  vlm_enhancer.py
tests/: conftest.py
tests/integration/: test_full_flow.py
tests/unit/: test_analyzer.py  test_data_processor.py  test_llm_client.py  test_prompts.py
